# bulba-crawler

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
application/: crawler.py
domain/: models.py  ports.py
infra/crawler/: _retry.py  html_parser.py  http_fetcher.py  image_downloader.py  rate_limiter.py
infra/db/: connection.py  sqlite_storage.py  sqlite_url_repo.py
