[project]
name = "bulba-crawler"
version = "0.1.0"
description = "Crawler to extract info from bulbapedia"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "aiolimiter>=1.2.1",
    "aiosqlite>=0.22.1",
    "httpx[http2]>=0.28.1",
    "pydantic>=2.12.5",
    "selectolax>=0.4.6",
    "structlog>=25.5.0",
    "typer[all]>=0.24.1",
    "uvloop>=0.22.1",
]
